[package]
name = "exeico"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "exeico"
repository = "https://github.com/ahaoboy/exeico"
homepage = "https://github.com/ahaoboy/exeico"
authors = ["ahaoboy"]

[dependencies]
anyhow = "1.0"
pelite = "0.10"
base64 = "0.22"
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Management_Deployment",
  "ApplicationModel",
] }
image = "0.25"
widestring = "1"
winapi = { version = "0.3.9", features = [
  "wingdi",
  "shellapi",
  "winuser",
  "libloaderapi",
  "winbase",
  "winnt",
  "minwindef",
  "ntdef",
] }
[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
